Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2013-01-15 (SVN):
    * utils, hcc, dhcc, pr_lex.c: removed defunct code in PR_NewLine()
      which was meant to function when _PrintNextLine() was to be used
      which had never been and removed ages ago. fixed LexWhitespace()
      so that we never from beyond EOF: fixes valgrind error reports.
      made EOF within C-style comments to error out.

2013-01-14 (SVN):
    * libs/timidity/instrum.c (load_instrument): initialize the added
      extra sample space (the +2 bytes in added in the previous patch)
      using the last actual sample.  while we are there, re-order the
      8-to-16 bit conversion code a little and apply the same +2 bytes
      patch there as well.
    * libs/timidity/instrum.c (load_instrument): allocate sp data with 2
      additional bytes. Timidity++ changelog from 1999-10-26 notes this
      patch by E.A.Welsh as: "It is possible that (OFS>>FRACTION_BITS)+1
      will yield a value which is 1 beyond the length of the sample.
      This happens when OFS < data_length, but (OFS>>FRACTION_BITS) ==
      (data_length>>FRACTION_BITS)." This fixes a valgrind error report
      for an invalid read of 2 bytes in resample.c:rs_plain().

2013-01-12 (SVN):
    * snd_wildmidi.c: added "/etc/wildmidi" to cfgfile[], which is where
      debian seems to install wildmidi.cfg.

2013-01-11 (SVN):
    * snd_mix.c (SND_InitScaletable): fixed an off-by-one mistake in the
      signed char conversion.

2013-01-11 (SVN):
    * docs/COMPILE: added a warning note to avoid buggy gcc versions,
      giving specifically gcc-4.1.0 and gcc-4.1.1 as examples.  updated
      tested clang versions.

2013-01-11 (SVN):
    * Makefiles, AROS builds: uncomment GL_LINK variable and compile the
      native opengl builds using LINK_GL_LIBS=yes.

2013-01-11 (SVN):
    * pr_exec.c (PR_ExecuteProgram): when interpreting a version6 progs,