@@ -64,7 +64,6 @@ int myargc;
 char **myargv;
 
 char		com_token[1024];
-qboolean	com_eof;
 
 // PRIVATE DATA DEFINITIONS ------------------------------------------------
 
@@ -267,7 +266,6 @@ const char *COM_Parse (const char *data)
 {
 	int		c;
 	int		len;
-	qboolean	done = false;
 
 	len = 0;
 	com_token[0] = 0;
@@ -275,67 +273,52 @@ const char *COM_Parse (const char *data)
 	if (!data)
 		return NULL;
 
-	do
+// skip whitespace
+skipwhite:
+	while ((c = *data) <= ' ')
 	{
-	// skip whitespace
-		while ((c = *data) <= ' ')
-		{
-			if (c == 0)	// end of file
-			{
-				com_eof = true;
-				return NULL;
-			}
+		if (c == 0)
+			return NULL;	// end of file
+		data++;
+	}
+
+// skip // comments
+	if (c == '/' && data[1] == '/')
+	{
+		while (*data && *data != '\n')
 			data++;
-		}
+		goto skipwhite;
+	}
 
-	// skip C style comments
-		if (c == '/' && data[1] == '*')
-		{
+// skip /*..*/ comments
+	if (c == '/' && data[1] == '*')
+	{
+		data += 2;
+		while (*data && !(*data == '*' && data[1] == '/'))
+			data++;
+		if (*data)
 			data += 2;
-			while (!(*data == '*' && data[1] == '/'))
-			{
-				if (*data == 0)	// end of file
-				{
-					com_eof = true;
-					return NULL;
-				}
-				data++;
-			}
-			data += 2;
-		}
-	// skip C++ style comments
-		else
-		if (c == '/' && data[1] == '/')
-		{
-			while (*data && *data != '\n')
-			{
-				data++;
-			}
-		}
-		else
-		{
-			done = true;
-		}
-	} while (done == false);
+		goto skipwhite;
+	}
 
-	// handle quoted strings specially
+// handle quoted strings specially
 	if (c == '\"')
 	{
 		data++;
-		do
+		while (1)
 		{
 			c = *data++;
-			if (c == '\"')
+			if (c == '\"' || !c)
 			{
 				com_token[len] = 0;
 				return data;
 			}
 			com_token[len] = c;
 			len++;
-		} while (1);
+		}
 	}
 
-	// parse special characters
+// parse single characters
 	if (c == '{' || c == '}' || c == '(' || c == ')' || c == '\'' || c == ':')
 	{
 		com_token[len] = c;
@@ -344,7 +327,7 @@ const char *COM_Parse (const char *data)
 		return data+1;
 	}
 
-	// parse a regular word
+// parse a regular word
 	do
 	{
 		com_token[len] = c;
@@ -352,9 +335,7 @@ const char *COM_Parse (const char *data)
 		len++;
 		c = *data;
 		if (c == '{' || c == '}' || c == '(' || c == ')' || c == '\'' || c == ':')
-		{
 			break;
-		}
 	} while (c > 32);
 
 	com_token[len] = 0;
